--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         docker push your-username/your-repo:latest
 
+      #测试修改
     - name: SSH to server and deploy
       uses: appleboy/ssh-action@v0.1.6
       with:
