--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,14 @@ jobs:
       uses: actions/checkout@v2
 
       #测试修改
-    - name: SSH to server and deploy
-      uses: appleboy/ssh-action@v0.1.6
+    - name: Scp to server and deploy
+      uses: appleboy/scp-action@v0.0.1
       with:
         host: ${{ secrets.SERVER_IP }}
         username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.PRIVATE_KEY }}
         password: ${{ secrets.SERVER_PASSWORD }}
         port: 22
-        source: "/"
+        source: "../*.html"
         target: ${{ secrets.SERVER_TARGET }}
         
