--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.PRIVATE_KEY }}
         port: 22
-        source: "../*.html"
+        source: "./*.html"
         target: ${{ secrets.SERVER_TARGET }}
         
